@@ -6,6 +6,7 @@ CHANGELOG
 * new 'address-merger', 'addressgroup-merger', 'service-merger', 'servicegroup-merger' utilities. Safer, faster and find more dups than MT.
 * new tag-edit utility on the same basis as address-edit.
 * Improved address name regex based filter with support to insert objects value: $$netmask$$, $$netmask.blank32$$, $$value$$, $$value.no-netmask$$
+* new Utility to manage stored API keys 'key-manager.php'
 
 utils:
 rules-edit: new action 'tag-remove-all'
@@ -14,8 +15,8 @@ address-edit: new action 'name-rename' to allow renaming based on template strin
 address-edit: new filters 'overriden.at.lower.level' and 'overrides.upper.level', 'ip4.includes-full', 'ip4.includes-full-or-partial', 'object is.iprange', 'object is.fqdn', 'object is.ip-netmask', netmask  >,<,=,! XX
 address-edit: new actions 'name-removePrefix, name-removeSuffix', 'tag-add', 'tag-add-force', 'tag-remove', 'tag-remove-all', 'tag-remove-regex'
 service-edit: new actions 'name-removePrefix, name-removeSuffix'
-override-finder: when firewall is not available, instead of exit wit error, program will skip it and warn user.
 tag-edit: new filters 'name eq', 'name contains', 'name eq.nocase', 'location is' and 'refcount - >,<,=,!'
+override-finder: when firewall is not available, instead of exit wit error, program will skip it and warn user.
 
 bugfix:
 - added checks to prevent crash when trying to resolve an IPv6 object into an IPv4 mapping
